--- a/index.html
+++ b/index.html
@@ -14,22 +14,41 @@
   
 <body>
   <div class="album py-5 bg-light">
-    <div class="container ">
-      <div class="row">
+    <div class="container ">  
+      <div class="row justify-content-md-center">
+        <div class="col-md-3">
+          <div class="card mb-4 ">
+            <img class="card-img-top" src="images/amanda.png" alt="Card image cap">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="card-text">Are you a victim?</p>
+                </div>
+              </div>
+          </div>
+        </div>
         <div class="col-md-6">
           <div class="card mb-4 box-shadow">
             <img class="card-img-top" src="images/jigsaw.png" alt="Card image cap">
             <div class="card-body">
               <h1 class="card-title">Let's play a game!</h1>
               <p class="card-text">Use the directions to move around the board. Find the key to save your life or make the wrong move and the game is over. (north, south, east, west)</p>
-              <div class="d-flex justify-content-between align-items-center">
-              <button onclick="startJigsaw();" class="btn btn-primary">Play</button>
-
+                <div class="d-flex justify-content-between align-items-center">
+                  <button onclick="startJigsaw();" class="btn btn-primary">Play</button>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-4 ">
+            <img class="card-img-top" src="images/JohnKramer.png" alt="Card image cap">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="card-text">Or a Survivor!</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
     </div>
   </div>
   <audio id="game">
