--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head> 
   <meta charset="utf-8">
   <title>Jigsaw Game</title>
-  
+  <link rel="icon" href="images/Favicon.png" type="image/gif" sizes="16x16">
   <!--Bootstrap Link-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-   <!--	Google Fonts-->
+  
+  <!--	Google Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
+  
   
 </head>
   
@@ -31,7 +33,7 @@
             <img class="card-img-top" src="images/jigsaw.png" alt="Card image cap">
             <div class="card-body">
               <h1 class="card-title">Let's play a game!</h1>
-              <p class="card-text">Use the directions to move around the board. Find the key to save your life or make the wrong move and the game is over. (north, south, east, west)</p>
+              <p class="card-text">Use the directions to move around the board. Find the key to save your life or make the wrong move and the game is over. (&#x2191; north, &#x2193; south, &#x2192; east, &#x2190; west)</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <button onclick="startJigsaw();" class="btn btn-primary">Play</button>
                 </div>
