--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="images/jigsaw.png" alt="Card image cap">
+            <img id="myImage" class="card-img-top" src="images/jigsaw.png" alt="Card image cap">
             <div class="card-body">
               <h1 class="card-title">Let's play a game!</h1>
               <p class="card-text">Use the directions to move around the board. Find the key to save your life or make the wrong move and the game is over. (&#x2191; north, &#x2193; south, &#x2192; east, &#x2190; west)</p>
